# NAPS2

./: README.md  results.html
CodeCanvas/: app.py  direct_test.py  k.txt  pyproject.toml  replit.md  research_backend.py  test_apis.py
CodeCanvas/attached_assets/: Pasted-1-GUI-with-PyQt6-The-first-step-is-to-build-a-user-friendly-graphical-interface-using-the-PyQt6-li-1759045489155_1759045489156.txt  domain_research_1759045504929.py
CodeCanvas/templates/: index.html
