[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.117.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pyqt6>=6.9.1",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.37.0",
]
